# developer_program

./: .gitattributes  README.md
HDK/: README.md
HDK/IoT Router BLE/IntegratedStarfishSDKSensorTagSnap/: main.js
HDK/IoT_Router_BLE/IntegratedStarfishSDKSensorTagSnap/: README.md  main.js  starfish.js
HDK/Milli5-Arduino CoAP Server/: README.md  changes.md  readme.txt
HDK/Milli5-Arduino CoAP Server/Release/: mshield-1.4.4.ino.uf2  mshield-1.4.5.ino.uf2
HDK/Milli5-Arduino CoAP Server/coap_rsrcs/: TT_resource.cpp  TT_resource.h  arduino_time.cpp  arduino_time.h  humi_sensor.cpp  humi_sensor.h  led.cpp  led.h  light_sensor.cpp  light_sensor.h  resrc_coap_if.cpp  resrc_coap_if.h  temp_sensor.cpp  temp_sensor.h  xyz_sensor.cpp  xyz_sensor.h
HDK/Milli5-Arduino CoAP Server/coap_server/: coap_server.cpp  coap_server.h  coapmsg.cpp  coapmsg.h  coapobserve.cpp  coapobserve.h  coapopt.cpp  coappdu.h  coapsensorobs.cpp  coapsensorobs.h  coapsensoruri.cpp  coapsensoruri.h  exp_coap.h
HDK/Milli5-Arduino CoAP Server/hdlc/: crc_xmodem.cpp  crc_xmodem.h  hdlc.cpp  hdlc.h  hdlcs.cpp  hdlcs.h  mshield.h
HDK/Milli5-Arduino CoAP Server/mshield/: TT_resource.cpp  TT_resource.h  mshield.h  mshield.ino
HDK/Milli5-Arduino CoAP Server/ssni_coap_server/: arduino_pins.h  arduino_time.cpp  arduino_time.h  bufutil.h  coap_rbt_msg.cpp  coap_rsp_msg.cpp  coap_rsp_msg.h  coap_server.cpp  coap_server.h  coapextif.h  coapmsg.cpp  coapmsg.h  coapobserve.cpp  coapobserve.h  coapopt.cpp  coappdu.h  coapsensorobs.cpp  coapsensorobs.h  coapsensoruri.cpp  coapsensoruri.h  coaputil.h  exp_coap.h  hbuf.cpp  hbuf.h  hdlc.cpp  hdlc.h  hdlcs.cpp  hdlcs.h  includes.h  log.cpp  log.h  readme.txt  temp_sensor.cpp  temp_sensor.h
HDK/Milli5-Arduino CoAP Server/utils/: arduino_pins.h  bufutil.cpp  bufutil.h  errors.h  hbuf.cpp  hbuf.h  log.cpp  log.h
HDK/Milli5-Sensor API/: README.md  changes.md
HDK/Milli5-Sensor API/Release/: sapi_mshield-1_4_6.ino.uf2  sapi_mshield-1_4_8.ino.uf2
HDK/Milli5-Sensor API/itron_coap_server/: arduino_pins.h  arduino_time.cpp  bufutil.cpp  cbor.h  cbor_encode.cpp  coap_rbt_msg.cpp  coap_rbt_msg.h  coap_rsp_msg.cpp  coap_rsp_msg.h  coap_server.cpp  coap_server.h  coapextif.h  coapmsg.cpp  coapobserve.cpp  coapobserve.h  coappdu.h  coapsensorobs.cpp  coapsensorobs.h  coapsensoruri.cpp  coapsensoruri.h  coaputil.h  crc_xmodem.cpp  crc_xmodem.h  errors.h  hbuf.cpp  hbuf.h  hdlc.cpp  hdlcs.cpp  hdlcs.h  log.cpp  log.h  portability.cpp  sapi.cpp  sapi.h  sapi_error.h  sapiprivate.h
HDK/Milli5-Sensor API/sapi_mshield/: TempSensor.cpp  TempSensor.h  sapi_mshield.h  sapi_mshield.ino
HDK/hdkmshield/: .gitignore  CMakeLists.txt  README.md  changes.md  mshield.cpp  toolchain-gnu.cmake
HDK/hdkmshield/SensorAPI/: arduino.h  arduino_time.cpp  arduino_time.h  bufutil.h  cbor_encode.cpp  coap_rbt_msg.h  coap_server.cpp  coapmsg.cpp  coapmsg.h  coapopt.cpp  coapsensorobs.cpp  coapsensoruri.cpp  coaputil.h  exp_coap.h  hbuf.cpp  hdlc.h  hdlcs.h  includes.h  portability.cpp  portability.h  sapi.cpp  sapi.h  sapi_error.h
HDK/hdkmshield/Sensors/: EchoSensor.h  TempSensor.h
HDK/hdkmshield/adafruit/hardware/samd/1.5.7/cores/arduino/: wiring.c
SDK/: README.md
SDK/Java CoAP Client/: .gitignore  README.md  changes.md  deletesession.json  get_hdk_observe.json  get_hdk_ping.json  get_hdk_sensor.json  getsession_caas.json  getsession_token.json  license.txt  pom.xml
SDK/Java MQTT Client/: .gitignore  README.md  changes.md  config.properties  pom.xml  testng.xml
SDK/Starfish Example Plot Application/: LICENSE.md  README.md  app.js  index.html  starfish-sdk.js  styles.css
SDK/Windows CoAP Client/: README.md  WindowsCoapClient.sln
SDK/Windows CoAP Client/Documentation/: Starfish Gateway HDK API Windows Developer Guide.docx
SDK/Windows CoAP Client/HdkClient/: App.config  (+75 more)
(+127 files in other folders)
